tests/fail/ForStatement.java
package fail;

public class ForStatement {
    public void forStatementAnalyze() {
        Integer[] a = {2, 3, 4, 5};
        int j = 0;
        for(int i = 0; i = 2; ++i, --j) {
            a += 1;
        }
        for(y : a) {
            a += 2;
        }
        for(;) {}

        for(;;;) {}

        for(;;)



    }
}
